Closed
Bug 1817712
Opened 2 years ago
Closed 2 years ago
GraphicsCriticalErrors When GPU process is disabled on Windows
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
112 Branch
Tracking | Status | |
---|---|---|
firefox112 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
Details
Attachments
(1 file)
When GPU process is disabled by pref "layers.gpu-process.enabled" = false, it causes GraphicsCriticalErrors on Windows.
Crash Annotation GraphicsCriticalError: |[0][GFX1-]: DCLayerTree(no device) (t=8.06602)[GFX1-]: DCLayerTree(no device)
Crash Annotation GraphicsCriticalError: |[0][GFX1-]: DCLayerTree(no device) (t=8.06602)
[1][GFX1-]: Failed to connect WebRenderBridgeChild. isParent=true (t=8.06602) [GFX1-]: Failed to connect WebRenderBridgeChild. isParent=true
Crash Annotation GraphicsCriticalError: |[0][GFX1-]: DCLayerTree(no device) (t=8.06602)
[1][GFX1-]: Failed to connect WebRenderBridgeChild. isParent=true (t=8.06602)
[2][GFX1-]: Fallback WR to SW-WR + D3D11 (t=8.06602) [GFX1-]: Fallback WR to SW-WR + D3D11
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → sotaro.ikeda.g
Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Attachment #9318662 -
Attachment description: Bug 1817712 - Disable Feature::WEBRENDER_DCOMP_PRESENT when GPU process does not exist → Bug 1817712 - Disable Feature::WEBRENDER_DCOMP_PRESENT when GPU process is disabled
Assignee | ||
Updated•2 years ago
|
Summary: GraphicsCriticalErrors When GPU process does not exist on Windows → GraphicsCriticalErrors When GPU process is disabled on Windows
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c6e016cff822
Disable Feature::WEBRENDER_DCOMP_PRESENT when GPU process is disabled r=gfx-reviewers,nical
Comment 3•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox112:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•