gfx/config/gfxConfigManager.cpp
@@ -261,6 +261,11 @@ void gfxConfigManager::ConfigureWebRender() {
                              "FEATURE_FAILURE_DCOMP_NOT_WIN10"_ns);
   }
 
+  if (!mFeatureGPUProcess->IsEnabled()) {
+    mFeatureWrDComp->Disable(FeatureStatus::Unavailable, "Requires GPU process",
+                             "FEATURE_FAILURE_NO_GPU_PROCESS"_ns);
+  }
+
   if (!mIsNightly &&
       StaticPrefs::gfx_webrender_dcomp_apply_1704954_AtStartup()) {
     // Disable DirectComposition for NVIDIA users with high/mixed refresh rate
